# AI_Homework_P2P_PPDAI

./: .gitignore  CONTRIBUTING.md  README.md  finalize_report.py  pyproject.toml
configs/: data_pipeline.yml  data_processing.yaml  model_training.yaml
docs/: 0project_structure.md  1requirements_analysis.md  2data_understanding.md  3data_processing_design.md  4data_pipeline_summary.md  5model_selection_analysis.md  6modeling_results.md  7project_summary.md  beginner_function_walkthrough.md  beginner_step_by_step.md  collaboration_guide.md  data_pipeline_summary.md  data_processing_design.md  data_understanding.md  interpretability_analysis.md  model_selection_analysis.md  modeling_design.md  modeling_results.md  project_structure.md  project_summary.md  reading_guide.md  requirements_analysis.md  role_customer_report.md  role_data_scientist_report.md  role_ml_engineer_report.md  role_project_manager_report.md  role_test_engineer_report.md  testing_strategy.md
docs/migration/: 2025-structure-refactor.md
environments/: README.md  requirements.txt
reports/: summary.md
scripts/: run_pipeline.sh  setup.ps1  setup.sh
src/ai_homework/: __init__.py
src/ai_homework/cli/: __init__.py  run_pipeline.py
src/ai_homework/data/: cleaning.py  labeling.py  loaders.py  loading.py
src/ai_homework/evaluation/: metrics.py
src/ai_homework/features/: constants.py  engineering.py  selection.py
src/ai_homework/models/: __init__.py  training.py
src/ai_homework/pipelines/: prepare_data.py  train_models.py
src/ai_homework/utils/: config.py  (+2 more)
tests/configs/: test_configs.py
