[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-homework-p2p"
version = "0.1.0"
description = "PPDAI P2P 违约风险建模项目的可复现实现"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "AI Homework Team" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

